ARM64: Introduce Exynos dtbtool to Linux build system
Add Exynos DTBTool to Linux build system. Exynos DTBTool is a tool to
build `dtb` file, a merged built DTBs file required for Exynos-powered devices
(mostly Android). From the XDA Thread [1]:

    dtbtool_exynos is based on Ketut Putu Kumajaya's work, (using his
    load_dtbh_block function) then making a tool similar to Qualcomm's
    dtbTool. It takes arguments in a way that makes it easy to integrate in
    the Linux build system.
    It produces 100% bit-exact dtb.img files compared to Samsung's stock
    images if you have the same dts sources.

Commit re-applied from [2].

[1] https://forum.xda-developers.com/t/exynos-dtbh-compiling-a-dtb-img-with-linux.3700690/
[2] https://github.com/jcadduono/android_kernel_samsung_universal8895/commit/945a8df88cf1d783407a36b660e8c767634a1968

Change-Id: Ief7607caeae2d934a7e52f452d7efc0faa61fdcd
[hm: Reword commit message, rename to dtb-exynos.img]
Signed-off-by: Hendra Manudinata <saya@hendra-manudinata.my.id>

--- a/arch/arm64/boot/Makefile
+++ b/arch/arm64/boot/Makefile
@@ -17,6 +17,9 @@
 include $(srctree)/arch/arm64/boot/dts/Makefile
 
 targets := Image Image.gz
+ifeq ($(CONFIG_EXYNOS_DTBTOOL),y)
+targets += dtb-exynos.img
+endif
 
 DTB_NAMES := $(subst $\",,$(CONFIG_BUILD_ARM64_APPENDED_DTB_IMAGE_NAMES))
 ifneq ($(DTB_NAMES),)
@@ -25,6 +28,9 @@ else
 DTB_LIST := $(dtb-y)
 endif
 DTB_OBJS := $(addprefix $(obj)/dts/,$(DTB_LIST))
+ifeq ($(CONFIG_EXYNOS_DTBTOOL),y)
+DTB_OBJS += $(shell find -L $(obj)/dts/ -name \*.dtb)
+endif
 
 $(obj)/Image: vmlinux FORCE
 	$(call if_changed,objcopy)
@@ -37,6 +43,11 @@ $(obj)/Image.gz: $(obj)/Image FORCE
 
 $(obj)/Image.gz-dtb: $(obj)/Image.gz $(DTB_OBJS) FORCE
 	$(call if_changed,cat)
+
+ifeq ($(CONFIG_EXYNOS_DTBTOOL),y)
+$(obj)/dtb-exynos.img: $(DTB_OBJS) FORCE
+	$(call if_changed,dtbtool_exynos)
+endif
 
 install: $(obj)/Image
 	$(CONFIG_SHELL) $(srctree)/$(src)/install.sh $(KERNELRELEASE) \
