media: sms3230: Rename `SMS3230` to `SEC_SMS3230`
In commit 488caf6 ("Import J400FXXU9CUJ4 Kernel source"), Samsung added
their modified Siano SMSxxxx based MDTV driver. However its
configuration name conflicts with the one that already in the Linux
kernel (`drivers/media/common/siano`), thus resulting this warning
during build:

    drivers/media/mtv/sms3230/Kconfig:51: warning:
    ignoring type redefinition of 'SMS_USB_DRV' from 'tristate' to 'boolean'

    drivers/media/mtv/sms3230/Kconfig:58: warning:
    ignoring type redefinition of 'SMS_SDIO_DRV' from 'tristate' to 'boolean'

Add `SEC_` prefix in the configuration name to workaround this issue.
Note that Samsung have added more modified MTV/MDTV drivers, but it
seems like only this driver that conflicts with another included driver.

Change-Id: I2a89159b072611df989a33581c378dde2a79b64c
Signed-off-by: Hendra Manudinata <saya@hendra-manudinata.my.id>

--- a/drivers/media/mtv/Kconfig
+++ b/drivers/media/mtv/Kconfig
@@ -48,8 +48,8 @@ choice
 		bool "MTV222"
 	config MTV_MTV23x
 		bool "MTV23x"
-	config MTV_SMS3230
-		bool "SMS3230"
+	config SEC_MTV_SMS3230
+		bool "Samsung-modified SMS3230"
 endchoice
 
 config MTV_SPI
