--- a/arch/arm64/configs/j4lte_defconfig
+++ b/arch/arm64/configs/j4lte_defconfig
@@ -217,7 +217,7 @@ CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
 CONFIG_SECCOMP_FILTER=y
 CONFIG_HAVE_CC_STACKPROTECTOR=y
 CONFIG_CC_STACKPROTECTOR=y
-CONFIG_CC_STACKPROTECTOR_NONE=y
+# CONFIG_CC_STACKPROTECTOR_NONE is not set
 # CONFIG_CC_STACKPROTECTOR_REGULAR is not set
 CONFIG_CC_STACKPROTECTOR_STRONG=y
 CONFIG_HAVE_CONTEXT_TRACKING=y
@@ -2341,7 +2341,6 @@ CONFIG_VIDEOBUF2_ION=y
 # Media drivers
 #
 # CONFIG_MEDIA_USB_SUPPORT is not set
-# CONFIG_SMS_USB_DRV is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_VIDEO_EXYNOS=y
 CONFIG_EXYNOS_MEDIA_DEVICE=y
@@ -2471,7 +2470,6 @@ CONFIG_MEDIA_EXYNOS=y
 #
 # Supported MMC/SDIO adapters
 #
-# CONFIG_SMS_SDIO_DRV is not set
 CONFIG_RADIO_ADAPTERS=y
 CONFIG_RADIO_S5E7570=y
 
@@ -2497,7 +2495,6 @@ CONFIG_RADIO_S610=y
 # Texas Instruments WL128x FM driver (ST based)
 #
 # CONFIG_CYPRESS_FIRMWARE is not set
-# CONFIG_SMS_SIANO_MDTV is not set
 
 #
 # Media ancillary drivers (tuners, sensors, i2c, frontends)
@@ -2567,13 +2564,16 @@ CONFIG_MEDIA_TUNER_MC44S803=y
 #
 # CONFIG_DVB_DUMMY_FE is not set
 # CONFIG_MTV is not set
+# CONFIG_SEC_SMS_SIANO_MDTV is not set
 
 #
 # Siano module components
 #
-# CONFIG_SMS_HOSTLIB_SUBSYS is not set
-CONFIG_SMS_SPI_DRV=y
-# CONFIG_SMS_I2C_DRV is not set
+# CONFIG_SEC_SMS_HOSTLIB_SUBSYS is not set
+# CONFIG_SEC_SMS_USB_DRV is not set
+# CONFIG_SEC_SMS_SDIO_DRV is not set
+CONFIG_SEC_SMS_SPI_DRV=y
+# CONFIG_SEC_SMS_I2C_DRV is not set
 # CONFIG_TDMB is not set
 
 #
